2005-09-15  Francois Marier  <francois@serioushack.com>

	* src/shaders/NoiseShader.cpp: replace deprecated_smoothstep()
	with cubicstep().

2005-09-09  Francois Marier  <francois@serioushack.com>

	* src/UniformPanel.cpp, ShrikeCanvas.cpp, ShGenMap.cpp,
	src/shaders/DiscoShader.cpp, PhongShader.cpp, WorleyShader.cpp,
	Textures.cpp, EnvMapShader.cpp, ShinyBumpMapShader.cpp,
	SatinShader.cpp, HomomorphicShader.cpp, JeweledShader.cpp,
	AlgebraShader.cpp, GlassShader.cpp, LuciteShader.cpp,
	HorizonMapping.cpp, Derivatives.cpp, BumpMapShader.cpp: Rename
	loadPng and savePng to load_PNG and save_PNG.

2005-08-15  Francois Marier  <francois@serioushack.com>

	* src/ShrikeCanvas.cpp (reshape): Remove unnecessary local
	variable that was causing assertion errors on Windows.

2005-08-04  Francois Marier  <francois@serioushack.com>

	* src/shaders/AlgebraShader.cpp, Text.cpp, PhongShader.cpp,
	NoiseShader.cpp, WorleyShader.cpp: Update the nibbles to the new
	names.

2005-07-07  Francois Marier  <francois@serioushack.com>

	* *.cpp, *.hpp: Change the license and copyright notices to the
	GNU LGPL.

	* COPYING: Provide a copy of the full license.

	* Makefile.am: Include COPYING in the tarballs and zips.

2005-07-05  Francois Marier  <francois@serioushack.com>

	* src/UniformPanel.cpp: Specify the mipmap level in the memory()
	call.
	
	* src/shaders/GlassShader.cpp, ShinyBumpMapShader.cpp,
	HorizonMapping.cpp, JeweledShader.cpp, LargeTexture.cpp,
	Textures.cpp, Derivatives.cpp, DiscoShader.cpp, BumpMapShader.cpp,
	CelShader.cpp, PhongShader.cpp, SatinShader.cpp, WorleyShader.cpp,
	HomomorphicShader.cpp, LuciteShader.cpp, EnvMapShader.cpp,
	DummyShader.cpp, AlgebraShader.cpp: Switch from ShTexture* to
	ShTable* to disable mipmapping.
	
2005-06-16  Francois Marier  <francois@serioushack.com>
	
	After the 0.7.8 release:
	
	* src/UniformPanel.cpp, ShrikeFrame.cpp, ShrikeFrame.hpp,
	ShrikeCanvas.cpp, ShrikeApp.cpp, ShrikeCanvas.hpp,